[package]
name = "seedling"
version = "0.1.0"
edition = "2024"

[dependencies]
smol = "2.0.2"
sqlx = { version = "0.8.6", features = ["sqlite"] }
seedling_macros.path = "./seedling_macros"

[dependencies.tokio]
version = "1.47.1"
optional = true
features = ["macros", "rt-multi-thread"]

[dependencies.mockd]
version = "0.4.51"
features = ["all"]

[features]
default = ["sqlx-tokio", "sqlite"]
sqlx-tokio = ["sqlx", "tokio", "sqlx/runtime-tokio"]

# async runtimes
smol = []

# db runtimes
sqlx = []
libsql = []


# databases
sqlite = []
postgres = []
mysql = []
mssql = []
