[package]
name = "seedling"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
seedling_macros.path = "./seedling_macros"

# Lib to generate fack data

[dependencies.mockd]
version = "0.4.51"
features = ["all"]

# Database backends

[dependencies.sqlx]
version = "0.8.6"
features = ["sqlite"]
optional = true

[dependencies.libsql]
version = "0.9.23"
optional = true

[dev-dependencies.tokio]
version = "1.47.1"
features = ["macros", "rt-multi-thread"]

[features]
default = ["sqlx-tokio", "sqlite"]
sqlx-tokio = ["sqlx", "sqlx/runtime-tokio"]

# databases
sqlite = []
postgres = []
mysql = []
mssql = []
