[package]
name = "seedling"
version = "0.1.0"
edition = "2024"

[dependencies]
seedling_macros.path = "./seedling_macros"

# Lib to generate fack data

[dependencies.mockd]
version = "0.4.51"
features = ["all"]

# Database backends

[dependencies.sqlx]
version = "0.8.6"
default-features = false
optional = true

[dependencies.libsql]
version = "0.9.23"
optional = true

[dependencies.rusqlite]
version = "0.37.0"
optional = true

[dev-dependencies.tokio]
version = "1.47.1"
features = ["macros", "rt-multi-thread"]

[features]
default = []


# databases
sqlite = []
postgres = []
mysql = []
mssql = []


[[example]]
name = "users"
required-features = ["sqlx/sqlite", "sqlite", "sqlx/runtime-tokio"]

[[example]]
name = "user_macro"
required-features = ["sqlx/sqlite", "sqlite", "sqlx/runtime-tokio"]


[[example]]
name = "rusqlite"
required-features = ["rusqlite", "rusqlite/bundled"]